--- a/angular.json
+++ b/angular.json
@@ -126,7 +126,10 @@
     }
   },
   "cli": {
-    "schematicCollections": ["@ionic/angular-toolkit"]
+    "schematicCollections": [
+      "@ionic/angular-toolkit"
+    ],
+    "analytics": "30657d9c-c876-4ee6-b4af-a9a7262e139d"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
