--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "@capacitor/status-bar": "6.0.0",
     "@codetrix-studio/capacitor-google-auth": "^3.4.0-rc.0",
     "@ionic/angular": "^8.0.0",
+    "country-codes-list": "^1.6.11",
+    "country-flag-emoji-polyfill": "^0.1.8",
+    "emoji-flags": "^1.3.0",
     "ionicons": "^7.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -47,6 +50,7 @@
     "@angular/language-service": "^17.0.2",
     "@capacitor/cli": "6.0.0",
     "@ionic/angular-toolkit": "^11.0.1",
+    "@types/emoji-flags": "^1.3.3",
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
