--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "country-codes-list": "^1.6.11",
     "country-flag-emoji-polyfill": "^0.1.8",
     "emoji-flags": "^1.3.0",
+    "ionic-social-login": "^1.0.0",
     "ionicons": "^7.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
