--- a/package.json
+++ b/package.json
@@ -68,5 +68,5 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.2.2"
   },
-  "description": "An Ionic project"
+  "description": "Jollof Token Mobile App"
 }
