--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "@capacitor/status-bar": "6.0.0",
     "@codetrix-studio/capacitor-google-auth": "^3.4.0-rc.0",
     "@ionic/angular": "^8.0.0",
+    "angular-ionic-social-login": "^1.1.0",
     "country-codes-list": "^1.6.11",
     "country-flag-emoji-polyfill": "^0.1.8",
     "emoji-flags": "^1.3.0",
-    "ionic-social-login": "^1.0.0",
     "ionicons": "^7.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
